<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.abbasmoharreri.computingaccount.ui.home.HomeFragment"
        android:label="@string/fragment_title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_charts"
        android:name="com.abbasmoharreri.computingaccount.ui.chartsNavigation.ChartsFragment"
        android:label="@string/fragment_title_dashboard"
        tools:layout="@layout/fragment_charts" />

    <fragment
        android:id="@+id/navigation_reports"
        android:name="com.abbasmoharreri.computingaccount.ui.reports.ReportsFragment"
        android:label="@string/fragment_title_reports"
        tools:layout="@layout/fragment_reports" />



    <fragment
        android:id="@+id/navigation_note"
        android:name="com.abbasmoharreri.computingaccount.ui.note.NoteFragment"
        android:label="@string/fragment_title_note"
        tools:layout="@layout/fragment_note" />


</navigation>
