<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@color/Background_EditText">



    <AutoCompleteTextView
        android:id="@+id/dialog_update_name_item"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:hint="@string/editText_item_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/dialog_update_condition_work"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/dialog_update_name_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/checkBox_condition_of_work"/>


    <LinearLayout
        android:id="@+id/dialog_update_container_cancel_update_button_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_update_condition_work"
        tools:ignore="MissingConstraints">


        <Button
            android:id="@+id/dialog_update_button_update_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/Background_screen"
            android:text="@string/button_name_update" />

        <Button
            android:id="@+id/dialog_update_button_cancel_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:background="@color/Background_screen"
            android:text="@string/button_name_cancel" />

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>